--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "react-avatar": "^3.9.7",
         "react-bootstrap": "^1.4.0",
         "react-dom": "^16.2.0",
+        "react-icons": "^4.3.1",
         "react-otp-input": "^2.4.0",
         "react-owl-carousel": "^2.3.3",
         "react-phone-input-2": "^2.14.0",
         "react-router-dom": "^5.2.0",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "4.0.1",
+        "react-slideview": "^0.1.3",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
