--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^5.2.0",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "4.0.1",
+        "react-select": "^5.2.1",
         "react-slideview": "^0.1.3",
         "web-vitals": "^0.2.4"
     },
